--- a/apps/sealed-secrets.yml
+++ b/apps/sealed-secrets.yml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://bitnami-labs.github.io/sealed-secrets
     chart: sealed-secrets
-    targetRevision: 2.16.0
+    targetRevision: *
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
