--- a/apps/sealed-secrets.yml
+++ b/apps/sealed-secrets.yml
@@ -9,6 +9,10 @@ spec:
     repoURL: https://bitnami-labs.github.io/sealed-secrets
     chart: sealed-secrets
     targetRevision: 2.17.6
+    helm:
+      releaseName: sealed-secrets
+      values: |
+        secretName: sealed-secrets-key   # <-- forces fixed name
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
