--- a/apps/foundation-app.yml
+++ b/apps/foundation-app.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/<org>/day1-foundation
+    repoURL: https://github.com/gorttman/day1-foundation
     path: apps
     targetRevision: main
     directory:
