--- a/apps/cert-manager/cert-manager-app.yml
+++ b/apps/cert-manager/cert-manager-app.yml
@@ -12,7 +12,7 @@ spec:
     helm:
       releaseName: cert-manager
       valueFiles:
-        - apps/cert-manager/helm/values.yaml
+        - values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: cert-manager
