--- a/apps/ingress-nginx/ingress-nginx-app.yml
+++ b/apps/ingress-nginx/ingress-nginx-app.yml
@@ -8,11 +8,11 @@ spec:
   source:
     repoURL: https://kubernetes.github.io/ingress-nginx
     chart: ingress-nginx
-    targetRevision: 4.11.2
+    targetRevision: 4.11.2        # stable release
     helm:
       releaseName: ingress-nginx
       valueFiles:
-        - values.yaml
+        - values.yaml             #  external values file
   destination:
     server: https://kubernetes.default.svc
     namespace: ingress-nginx
@@ -20,5 +20,3 @@ spec:
     automated:
       prune: true
       selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
