--- a/apps/ingress-nginx/values.yml
+++ b/apps/ingress-nginx/values.yml
@@ -1,6 +1,14 @@
 controller:
+  replicaCount: 1
+
   service:
     type: NodePort
     nodePorts:
       http: 30080
       https: 30443
+
+  admissionWebhooks:
+    enabled: true
+
+defaultBackend:
+  enabled: true
