--- a/apps/ingress-nginx/ingress-nginx-app.yml
+++ b/apps/ingress-nginx/ingress-nginx-app.yml
@@ -13,7 +13,7 @@ spec:
     targetRevision: 4.11.2    # adjust version if needed
     helm:
       valueFiles:
-        - apps/ingress-nginx/values.yml
+        - values.yml
   destination:
     server: https://kubernetes.default.svc
     namespace: ingress-nginx
