--- a/apps/ingress-nginx-namespace.yml
+++ b/apps/ingress-nginx-namespace.yml
@@ -1,25 +1,6 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
+apiVersion: v1
+kind: Namespace
 metadata:
-  name: ingress-nginx-namespace
-  namespace: argocd
+  name: ingress-nginx
   annotations:
     argocd.argoproj.io/sync-wave: "0"
-spec:
-  project: default
-  source:
-    repoURL: https://github.com/gorttman/day1-foundation.git
-    targetRevision: main
-    path: apps
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: argocd
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-  ignoreDifferences:
-    - group: ""
-      kind: Namespace
-      jsonPointers:
-        - /metadata/finalizers
