--- a/apps/cert-manager-crds-app.yml
+++ b/apps/cert-manager-crds-app.yml
@@ -4,7 +4,7 @@ metadata:
   name: cert-manager-crds
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "0"
+    argocd.argoproj.io/sync-wave: "0"   # CRDs before the main app
 spec:
   project: default
   source:
@@ -22,4 +22,3 @@ spec:
       selfHeal: true
   syncOptions:
     - CreateNamespace=true
-
