--- a/apps/cert-manager-app.yml
+++ b/apps/cert-manager-app.yml
@@ -5,13 +5,17 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: https://charts.jetstack.io
-    chart: cert-manager
-    targetRevision: v1.16.1
-    helm:
-      valueFiles:
-        - $values/apps/values/cert-manager-values.yml
+  sources:
+    - repoURL: https://charts.jetstack.io
+      chart: cert-manager
+      targetRevision: v1.16.1
+      helm:
+        releaseName: cert-manager
+        valueFiles:
+          - $values/apps/values/cert-manager-values.yml
+    - repoURL: https://github.com/gorttman/day1-foundation.git
+      targetRevision: main
+      ref: values
   destination:
     server: https://kubernetes.default.svc
     namespace: cert-manager
