--- a/apps/dhcpd/dhcpd-secret-app.yml
+++ b/apps/dhcpd/dhcpd-secret-app.yml
@@ -1,19 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: dhcpd
+  name: dhcpd-secret
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-wave: "-1"
 spec:
   project: default
   source:
     repoURL: https://github.com/gorttman/day1-foundation.git
     targetRevision: main
-    path: apps/dhcpd/deploy
+    path: apps/dhcpd/secret
   destination:
     server: https://kubernetes.default.svc
-    namespace: dhcpd
+    namespace: argocd
   syncPolicy:
     automated:
       prune: true
