--- a/apps/dhcpd/dhcpd-app.yml
+++ b/apps/dhcpd/dhcpd-app.yml
@@ -3,17 +3,22 @@ kind: Application
 metadata:
   name: dhcpd
   namespace: argocd
+  labels:
+    app.kubernetes.io/part-of: day1-foundation
   annotations:
-    argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   project: default
-  source:
-    repoURL: https://github.com/gorttman/day1-foundation.git
-    targetRevision: main
-    path: apps/dhcpd/deploy
   destination:
     server: https://kubernetes.default.svc
-    namespace: dhcpd
+    namespace: infra
+  sources:
+    - repoURL: https://github.com/gorttman/day1-foundation.git
+      targetRevision: HEAD
+      path: apps/dhcpd
+    - repoURL: https://github.com/gorttman/dhcpd-config.git
+      targetRevision: HEAD
+      ref: dhcpd-conf
   syncPolicy:
     automated:
       prune: true
