--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -2,7 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: dhcpd
-  namespace: dhcpd
+  namespace: infra
+  labels:
+    app: dhcpd
 spec:
   replicas: 1
   selector:
@@ -12,26 +14,30 @@ spec:
     metadata:
       labels:
         app: dhcpd
+      annotations:
+        checksum/dhcpd-config: "{{- .ConfigMap.data.dhcpd.conf | sha256sum -}}"
     spec:
+      hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet
+      serviceAccountName: dhcpd
+      nodeSelector:
+        kubernetes.io/hostname: pi-1   # pin to backend NIC node
       containers:
-        - name: dhcpd
-          image: networkboot/dhcpd:latest
-          args: ["-f", "-cf", "/etc/dhcp/dhcpd.conf"]
-          volumeMounts:
-            - name: dhcpd-conf
-              mountPath: /etc/dhcp
-              readOnly: true
+      - name: dhcpd
+        image: networkboot/dhcpd:2.4.5-arm64
+        imagePullPolicy: IfNotPresent
+        args: ["-d", "-cf", "/etc/dhcp/dhcpd.conf", "-lf", "/var/lib/dhcp/dhcpd.leases", "eth1"]
+        ports:
+          - containerPort: 67
+            protocol: UDP
+        volumeMounts:
+          - name: dhcpd-config
+            mountPath: /etc/dhcp
+        securityContext:
+          runAsUser: 0
+          capabilities:
+            add: ["NET_ADMIN", "NET_BIND_SERVICE", "NET_RAW"]
       volumes:
-        - name: dhcpd-conf
+        - name: dhcpd-config
           configMap:
-            name: dhcpd-conf
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: dhcpd-conf
-  namespace: dhcpd
-data:
-  # This pulls from the *second source repo* in dhcpd-app.yml
-  dhcpd.conf: |
-    #@include config/dhcpd.conf
+            name: dhcpd-config
