--- a/apps/dhcpd/dhcpd-namespace.yml
+++ b/apps/dhcpd/dhcpd-namespace.yml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: dhcpd
-  annotations:
-    argocd.argoproj.io/sync-wave: "0"
+  name: infra
+  labels:
+    argocd.argoproj.io/managed-by: argocd
