--- a/apps/dhcpd/tests/dhcpd-test-pod.yml
+++ b/apps/dhcpd/tests/dhcpd-test-pod.yml
@@ -1,12 +1,24 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: dhcpd-test
+  name: dhcpd-smoketest
   namespace: infra
+  labels:
+    app.kubernetes.io/name: dhcpd-smoketest
 spec:
   restartPolicy: Never
   hostNetwork: true
+  dnsPolicy: ClusterFirstWithHostNet
+  nodeSelector:
+    pi-lab.io/lan: backend
   containers:
-  - name: test
-    image: busybox
-    command: ["udhcpc", "-i", "eth1", "-vv"]
+    - name: test
+      image: busybox:1.36.1
+      command: ["sh", "-c"]
+      args:
+        - |
+          echo "Acquiring lease on eth1...";
+          udhcpc -i eth1 -t 3 -q -n && echo "OK: got lease" || (echo "FAIL: no lease" && exit 1)
+      securityContext:
+        runAsUser: 0
+        allowPrivilegeEscalation: false
