--- a/apps/dhcpd/dhcpd-app.yml
+++ b/apps/dhcpd/dhcpd-app.yml
@@ -16,7 +16,7 @@ spec:
     - repoURL: https://github.com/gorttman/day1-foundation.git
       targetRevision: main
       path: apps/dhcpd
-    - repoURL: https://github.com/gorttman/dhcpd-config.git
+    - repoURL: https://github.com/gorttman/dhcpd-conf.git
       targetRevision: main
       path: "."
   syncPolicy:
