--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -57,13 +57,13 @@ spec:
           image: networkboot/dhcpd:1.3.0
           imagePullPolicy: IfNotPresent
 
-          # Bind only to backend NIC (adjust "eth1" to your actual interface name, e.g. end0)
+          # Bind only to the correct backend NIC
           args:
             - "-4"
             - "-f"
             - "-cf"
             - "/etc/dhcp/dhcpd.conf"
-            - "eth1"
+            - "eth0"   #  corrected interface
 
           ports:
             - name: dhcp
@@ -110,4 +110,4 @@ spec:
       volumes:
         - name: dhcpd-config
           configMap:
-            name: dhcpd-config   # will be rewritten to hashed name by kustomize
+            name: dhcpd-config   # always plain name (we disabled hash in dhcpd-conf)
