--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -18,12 +18,9 @@ spec:
         app.kubernetes.io/part-of: day1-foundation
     spec:
       serviceAccountName: dhcpd
-
-      # DHCP must listen to broadcasts on the real LAN
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
 
-      # Affinity: must be arm64 arch AND either control-plane OR master role label
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
@@ -43,7 +40,6 @@ spec:
                     operator: In
                     values: ["", "true"]
 
-      # Tolerations so it can run on tainted master/control-plane
       tolerations:
         - key: "node-role.kubernetes.io/control-plane"
           operator: "Exists"
@@ -56,26 +52,22 @@ spec:
         - name: dhcpd
           image: networkboot/dhcpd:1.3.0
           imagePullPolicy: IfNotPresent
-
-          # Bind only to the correct backend NIC
           command: ["dhcpd"]
           args:
-            - "-4"
             - "-f"
             - "-cf"
             - "/etc/dhcp/dhcpd.conf"
-            - "eth0"   #  corrected interface
-
+            - "eth0"
           ports:
             - name: dhcp
               containerPort: 67
               protocol: UDP
-
           volumeMounts:
             - name: dhcpd-config
               mountPath: /etc/dhcp
               readOnly: true
-
+            - name: dhcpd-leases
+              mountPath: /var/lib/dhcp
           securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
@@ -83,7 +75,6 @@ spec:
               add: ["NET_ADMIN", "NET_RAW", "NET_BIND_SERVICE"]
             runAsNonRoot: false
             runAsUser: 0
-
           readinessProbe:
             exec:
               command: ["sh", "-c", "dhcpd -t -cf /etc/dhcp/dhcpd.conf >/dev/null 2>&1"]
@@ -91,7 +82,6 @@ spec:
             periodSeconds: 15
             timeoutSeconds: 3
             failureThreshold: 2
-
           livenessProbe:
             exec:
               command: ["sh", "-c", "pidof dhcpd >/dev/null 2>&1 || exit 1"]
@@ -99,7 +89,6 @@ spec:
             periodSeconds: 20
             timeoutSeconds: 3
             failureThreshold: 3
-
           resources:
             requests:
               cpu: 5m
@@ -111,4 +100,6 @@ spec:
       volumes:
         - name: dhcpd-config
           configMap:
-            name: dhcpd-config   # always plain name (we disabled hash in dhcpd-conf)
+            name: dhcpd-config
+        - name: dhcpd-leases
+          emptyDir: {}
