--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -48,6 +48,14 @@ spec:
           operator: "Exists"
           effect: "NoSchedule"
 
+      initContainers:
+        - name: init-leases
+          image: busybox:1.36
+          command: ["sh", "-c", "mkdir -p /var/lib/dhcp && touch /var/lib/dhcp/dhcpd.leases"]
+          volumeMounts:
+            - name: dhcpd-leases
+              mountPath: /var/lib/dhcp
+
       containers:
         - name: dhcpd
           image: networkboot/dhcpd:1.3.0
