--- a/apps/pxe-http/kustomization.yml
+++ b/apps/pxe-http/kustomization.yml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: infra
+
 resources:
-  - dhcpd/dhcpd-app.yml
-  - pxe-http/pxe-http-app.yml
+  - pxe-http-deploy.yml
+  - pxe-http-configmap.yml
