--- a/apps/nfs-server/nfs-server-deploy.yml
+++ b/apps/nfs-server/nfs-server-deploy.yml
@@ -41,7 +41,7 @@ spec:
 
       containers:
         - name: nfs-server
-          image: k8s.gcr.io/volume-nfs:0.8
+          image: itsthenetwork/nfs-server-alpine:latest
           securityContext:
             privileged: true
           ports:
