--- a/apps/nfs-server/nfs-server-deploy.yml
+++ b/apps/nfs-server/nfs-server-deploy.yml
@@ -39,7 +39,7 @@ spec:
 
       containers:
         - name: nfs-server
-          image: erichough/nfs-server:latest
+          image: ghcr.io/k8s-at-home/nfs-server-alpine:latest
           securityContext:
             privileged: true
           env:
