:bug: arm64 image

--- a/apps/nfs-server/nfs-server-deploy.yml
+++ b/apps/nfs-server/nfs-server-deploy.yml
@@ -39,7 +39,7 @@ spec:
 
       containers:
         - name: nfs-server
-          image: ghcr.io/onedr0p/nfs-server-alpine:latest
+          image: image: gists/nfs-server:latest
           securityContext:
             privileged: true
           env:
