:sparkles: Modified for Day 1 Coredns

--- a/apps/pxe-http/pxe-http-configmap.yml
+++ b/apps/pxe-http/pxe-http-configmap.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pxe-http-files
+  name: pxe-http-config
   namespace: infra
 data:
   boot.ipxe: |
     #!ipxe
     dhcp
-    set base-url http://192.168.1.10/images
-    kernel ${base-url}/vmlinuz initrd=initrd.img root=/dev/nfs nfsroot=192.168.1.10:/nfs/rootfs rw ip=dhcp
+    set base-url http://pxe.i3sec.com.au/images
+    kernel ${base-url}/vmlinuz initrd=initrd.img root=/dev/nfs nfsroot=nfs.i3sec.com.au:/nfs/rootfs rw ip=dhcp
     initrd ${base-url}/initrd.img
     boot
   index.html: |
