--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -6,6 +6,9 @@ metadata:
   labels:
     app.kubernetes.io/name: dhcpd
     app.kubernetes.io/part-of: day1-foundation
+  annotations:
+    # Force a "replace" so removed fields (like old volumes) are truly removed server-side
+    argocd.argoproj.io/sync-options: Replace=true
 spec:
   replicas: 1
   selector:
@@ -18,54 +21,25 @@ spec:
         app.kubernetes.io/part-of: day1-foundation
     spec:
       serviceAccountName: dhcpd
-      hostNetwork: true
-      dnsPolicy: ClusterFirstWithHostNet
-
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-              - matchExpressions:
-                  - key: kubernetes.io/arch
-                    operator: In
-                    values: ["arm64"]
-                  - key: node-role.kubernetes.io/control-plane
-                    operator: In
-                    values: ["", "true"]
-              - matchExpressions:
-                  - key: kubernetes.io/arch
-                    operator: In
-                    values: ["arm64"]
-                  - key: node-role.kubernetes.io/master
-                    operator: In
-                    values: ["", "true"]
-
+      nodeSelector:
+        pi-lab.io/role: infra
       tolerations:
-        - key: "node-role.kubernetes.io/control-plane"
-          operator: "Exists"
-          effect: "NoSchedule"
         - key: "node-role.kubernetes.io/master"
           operator: "Exists"
           effect: "NoSchedule"
-
-      initContainers:
-        - name: init-leases
-          image: busybox:1.36
-          command: ["sh", "-c", "mkdir -p /var/lib/dhcp && touch /var/lib/dhcp/dhcpd.leases"]
-          volumeMounts:
-            - name: dhcpd-leases
-              mountPath: /var/lib/dhcp
-
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
+          effect: "NoSchedule"
       containers:
         - name: dhcpd
-          image: networkboot/dhcpd:1.3.0
+          image: ghcr.io/gorttman/dhcpd:1.0.0
           imagePullPolicy: IfNotPresent
-          command: ["dhcpd"]
           args:
             - "-f"
             - "-cf"
             - "/etc/dhcp/dhcpd.conf"
-            - "eth0"
+            - "-lf"
+            - "/var/lib/dhcp/dhcpd.leases"
           ports:
             - name: dhcp
               containerPort: 67
@@ -77,26 +51,9 @@ spec:
             - name: dhcpd-leases
               mountPath: /var/lib/dhcp
           securityContext:
-            allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: true
             capabilities:
-              add: ["NET_ADMIN", "NET_RAW", "NET_BIND_SERVICE"]
-            runAsNonRoot: false
-            runAsUser: 0
-          readinessProbe:
-            exec:
-              command: ["sh", "-c", "dhcpd -t -cf /etc/dhcp/dhcpd.conf >/dev/null 2>&1"]
-            initialDelaySeconds: 2
-            periodSeconds: 15
-            timeoutSeconds: 3
-            failureThreshold: 2
-          livenessProbe:
-            exec:
-              command: ["sh", "-c", "pidof dhcpd >/dev/null 2>&1 || exit 1"]
-            initialDelaySeconds: 10
-            periodSeconds: 20
-            timeoutSeconds: 3
-            failureThreshold: 3
+              add: ["NET_ADMIN","NET_RAW","CAP_NET_BIND_SERVICE"]
+            allowPrivilegeEscalation: false
           resources:
             requests:
               cpu: 5m
@@ -104,7 +61,6 @@ spec:
             limits:
               cpu: 200m
               memory: 128Mi
-
       volumes:
         - name: dhcpd-config
           configMap:
