--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -20,25 +20,24 @@ spec:
       serviceAccountName: dhcpd
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
-
       affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
+  	nodeAffinity:
+    	  requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
               - matchExpressions:
-                  - key: kubernetes.io/arch
-                    operator: In
-                    values: ["arm64"]
-                  - key: node-role.kubernetes.io/control-plane
-                    operator: In
-                    values: ["", "true"]
+                - key: kubernetes.io/arch
+                  operator: In
+                  values:
+                    - arm64
+                - key: node-role.kubernetes.io/control-plane
+                  operator: Exists
               - matchExpressions:
-                  - key: kubernetes.io/arch
-                    operator: In
-                    values: ["arm64"]
-                  - key: node-role.kubernetes.io/master
-                    operator: In
-                    values: ["", "true"]
+                - key: kubernetes.io/arch
+                  operator: In
+                  values:
+                    - arm64
+                - key: node-role.kubernetes.io/master
+                  operator: Exists
 
       tolerations:
         - key: "node-role.kubernetes.io/control-plane"
