--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -22,62 +22,44 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       affinity:
         nodeAffinity:
-    	  requiredDuringSchedulingIgnoredDuringExecution:
+          requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
               - matchExpressions:
-                - key: kubernetes.io/arch
-                  operator: In
-                  values:
-                    - arm64
-                - key: node-role.kubernetes.io/control-plane
-                  operator: Exists
+                  - key: kubernetes.io/arch
+                    operator: In
+                    values:
+                      - arm64
+                  - key: node-role.kubernetes.io/control-plane
+                    operator: In
+                    values:
+                      - ""
+                      - "true"
               - matchExpressions:
-                - key: kubernetes.io/arch
-                  operator: In
-                  values:
-                    - arm64
-                - key: node-role.kubernetes.io/master
-                  operator: Exists
-
-      tolerations:
-        - key: "node-role.kubernetes.io/control-plane"
-          operator: "Exists"
-          effect: "NoSchedule"
-        - key: "node-role.kubernetes.io/master"
-          operator: "Exists"
-          effect: "NoSchedule"
-
-      initContainers:
-        - name: init-leases
-          image: busybox:1.36
-          command: ["sh", "-c", "mkdir -p /var/lib/dhcp && touch /var/lib/dhcp/dhcpd.leases"]
-          volumeMounts:
-            - name: dhcpd-leases
-              mountPath: /var/lib/dhcp
+                  - key: kubernetes.io/arch
+                    operator: In
+                    values:
+                      - arm64
+                  - key: node-role.kubernetes.io/master
+                    operator: In
+                    values:
+                      - ""
+                      - "true"
 
       containers:
         - name: dhcpd
-          image: networkboot/dhcpd:1.3.0
+          image: networkboot/dhcpd:latest
           imagePullPolicy: IfNotPresent
-          command: ["dhcpd"]
           args:
             - "-f"
             - "-cf"
             - "/etc/dhcp/dhcpd.conf"
+            - "-lf"
+            - "/var/lib/dhcp/dhcpd.leases"
             - "eth0"
           ports:
-            - name: dhcp
-              containerPort: 67
+            - containerPort: 67
               protocol: UDP
-          volumeMounts:
-            - name: dhcpd-config
-              mountPath: /etc/dhcp
-              readOnly: true
-            - name: dhcpd-leases
-              mountPath: /var/lib/dhcp
           securityContext:
-            allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: true
             capabilities:
               add: ["NET_ADMIN", "NET_RAW", "NET_BIND_SERVICE"]
             runAsNonRoot: false
@@ -103,6 +85,11 @@ spec:
             limits:
               cpu: 200m
               memory: 128Mi
+          volumeMounts:
+            - name: dhcpd-config
+              mountPath: /etc/dhcp
+            - name: dhcpd-leases
+              mountPath: /var/lib/dhcp
 
       volumes:
         - name: dhcpd-config
