:bug: Namespace missing after app sync

--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -50,12 +50,7 @@ spec:
           image: networkboot/dhcpd:latest
           imagePullPolicy: IfNotPresent
           args:
-            - "-f"
-            - "-cf"
-            - "/etc/dhcp/dhcpd.conf"
-            - "-lf"
-            - "/var/lib/dhcp/dhcpd.leases"
-            - "eth0"
+            - eth0
           ports:
             - containerPort: 67
               protocol: UDP
