--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -47,7 +47,7 @@ spec:
 
       containers:
         - name: dhcpd
-          image: ghcr.io/everpeace/dhcpd:latest
+          image: ghcr.io/gorttman/dhcpd:latest
           imagePullPolicy: IfNotPresent
           args:
             - eth0
