--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -17,6 +17,8 @@ spec:
         app.kubernetes.io/name: dhcpd
         app.kubernetes.io/part-of: day1-foundation
     spec:
+      hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet
       serviceAccountName: dhcpd
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
