:bug: Namespace missing after app sync

--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -17,9 +17,9 @@ spec:
         app.kubernetes.io/name: dhcpd
         app.kubernetes.io/part-of: day1-foundation
     spec:
-      serviceAccountName: dhcpd
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
+      serviceAccountName: dhcpd
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
@@ -34,41 +34,40 @@ spec:
                     values:
                       - ""
                       - "true"
-              - matchExpressions:
-                  - key: kubernetes.io/arch
-                    operator: In
-                    values:
-                      - arm64
-                  - key: node-role.kubernetes.io/master
-                    operator: In
-                    values:
-                      - ""
-                      - "true"
-
       containers:
         - name: dhcpd
           image: ghcr.io/gorttman/dhcpd:latest
           imagePullPolicy: IfNotPresent
+          command: ["/usr/sbin/dhcpd"]
           args:
-            - eth0
-          ports:
-            - containerPort: 67
-              protocol: UDP
+            - "-f"
+            - "-cf"
+            - "/etc/dhcp/dhcpd.conf"
+            - "eth0"
           securityContext:
             capabilities:
-              add: ["NET_ADMIN", "NET_RAW", "NET_BIND_SERVICE"]
+              add:
+                - NET_ADMIN
+                - NET_RAW
+                - NET_BIND_SERVICE
             runAsNonRoot: false
             runAsUser: 0
           readinessProbe:
             exec:
-              command: ["sh", "-c", "dhcpd -t -cf /etc/dhcp/dhcpd.conf >/dev/null 2>&1"]
+              command:
+                - sh
+                - -c
+                - "dhcpd -t -cf /etc/dhcp/dhcpd.conf >/dev/null 2>&1"
             initialDelaySeconds: 2
             periodSeconds: 15
             timeoutSeconds: 3
             failureThreshold: 2
           livenessProbe:
             exec:
-              command: ["sh", "-c", "pidof dhcpd >/dev/null 2>&1 || exit 1"]
+              command:
+                - sh
+                - -c
+                - "pidof dhcpd >/dev/null 2>&1 || exit 1"
             initialDelaySeconds: 10
             periodSeconds: 20
             timeoutSeconds: 3
@@ -85,7 +84,6 @@ spec:
               mountPath: /etc/dhcp
             - name: dhcpd-leases
               mountPath: /var/lib/dhcp
-
       volumes:
         - name: dhcpd-config
           configMap:
