:sparkles: New pxe config

--- a/apps/pxe-http/pxe-http-configmap.yml
+++ b/apps/pxe-http/pxe-http-configmap.yml
@@ -7,9 +7,9 @@ data:
   boot.ipxe: |
     #!ipxe
     dhcp
-    set base-url http://pxe.i3sec.com.au/images
+    set base-url http://pxe.i3sec.com.au:8081/images
     kernel ${base-url}/vmlinuz initrd=initrd.img root=/dev/nfs nfsroot=nfs.i3sec.com.au:/nfs/rootfs rw ip=dhcp
     initrd ${base-url}/initrd.img
     boot
   index.html: |
-    <html><body><h1>PXE HTTP Boot Server</h1></body></html>
+    <html><body><h1>PXE HTTP Boot Server</h1></body></html>“
