--- a/apps/pxe-http/kustomization.yml
+++ b/apps/pxe-http/kustomization.yml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 namespace: infra
-
 resources:
-  - pxe-http-deploy.yml
   - pxe-http-configmap.yml
+  - pxe-http-nginx-config.yml
+  - pxe-http-deploy.yml
