:sparkles: New pxe config

--- a/apps/pxe-http/kustomization.yml
+++ b/apps/pxe-http/kustomization.yml
@@ -4,5 +4,5 @@ kind: Kustomization
 namespace: infra
 resources:
   - pxe-http-configmap.yml
-  - pxe-http-nginx-config.yml
+  - pxe-http-config.yml
   - pxe-http-deploy.yml
