--- a/apps/dhcpd/dhcpd-deploy.yml
+++ b/apps/dhcpd/dhcpd-deploy.yml
@@ -1,91 +1,30 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: dhcpd
-  namespace: infra
-  labels:
-    app.kubernetes.io/name: dhcpd
-    app.kubernetes.io/part-of: day1-foundation
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app.kubernetes.io/name: dhcpd
-  template:
-    metadata:
-      labels:
-        app.kubernetes.io/name: dhcpd
-        app.kubernetes.io/part-of: day1-foundation
-    spec:
-      hostNetwork: true
-      dnsPolicy: ClusterFirstWithHostNet
-      serviceAccountName: dhcpd
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-              - matchExpressions:
-                  - key: kubernetes.io/arch
-                    operator: In
-                    values:
-                      - arm64
-                  - key: node-role.kubernetes.io/control-plane
-                    operator: In
-                    values:
-                      - ""
-                      - "true"
-      containers:
-        - name: dhcpd
-          image: ghcr.io/gorttman/dhcpd:latest
-          imagePullPolicy: IfNotPresent
-          command: ["/bin/sh"]
-          args:
-            - -c
-            - |
-              mkdir -p /var/lib/dhcp && touch /var/lib/dhcp/dhcpd.leases && exec /usr/sbin/dhcpd -f -cf /etc/dhcp/dhcpd.conf eth0
-          securityContext:
-            capabilities:
-              add:
-                - NET_ADMIN
-                - NET_RAW
-                - NET_BIND_SERVICE
-            runAsNonRoot: false
-            runAsUser: 0
-          readinessProbe:
-            exec:
-              command:
-                - sh
-                - -c
-                - "dhcpd -t -cf /etc/dhcp/dhcpd.conf >/dev/null 2>&1"
-            initialDelaySeconds: 2
-            periodSeconds: 15
-            timeoutSeconds: 3
-            failureThreshold: 2
-          livenessProbe:
-            exec:
-              command:
-                - sh
-                - -c
-                - "pidof dhcpd >/dev/null 2>&1 || exit 1"
-            initialDelaySeconds: 10
-            periodSeconds: 20
-            timeoutSeconds: 3
-            failureThreshold: 3
-          resources:
-            requests:
-              cpu: 5m
-              memory: 32Mi
-            limits:
-              cpu: 200m
-              memory: 128Mi
-          volumeMounts:
-            - name: dhcpd-config
-              mountPath: /etc/dhcp
-            - name: dhcpd-leases
-              mountPath: /var/lib/dhcp
-      volumes:
-        - name: dhcpd-config
-          configMap:
-            name: dhcpd-config
-        - name: dhcpd-leases
-          emptyDir: {}
+containers:
+  - name: dhcpd
+    image: ghcr.io/gorttman/dhcpd:latest
+    imagePullPolicy: IfNotPresent
+    command:
+      - dhcpd
+      - -4
+      - -f
+      - -cf
+      - /etc/dhcp/dhcpd.conf
+      - -lf
+      - /var/lib/dhcp/dhcpd.leases
+      - eth0
+    securityContext:
+      capabilities:
+        add: ["NET_ADMIN", "NET_RAW", "NET_BIND_SERVICE"]
+      runAsNonRoot: false
+      runAsUser: 0
+    volumeMounts:
+      - name: dhcpd-config
+        mountPath: /etc/dhcp
+      - name: dhcpd-leases
+        mountPath: /var/lib/dhcp
+    resources:
+      requests:
+        cpu: 5m
+        memory: 32Mi
+      limits:
+        cpu: 200m
+        memory: 128Mi
